Correct size vision on tablet.

--- a/css/style.css
+++ b/css/style.css
@@ -500,11 +500,26 @@ button {
     gap: 72px;
 }
 
-
+@media screen and (min-width: 768px) {
+    .feature__list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        column-gap: 24px;
+        row-gap: 72px;
+        }
+}
 
 /* .feature__item {
     flex-basis: calc((100% - 72px)/4);
 } */
+
+@media screen and (min-width: 768px) {
+    .feature__item {
+            flex-basis: calc((100% - 24px)/2);
+        }
+}
 
 .feature__wrapper {
     display: flex;
@@ -535,6 +550,12 @@ button {
     color: var(--color-dark-navyblue);
 }
 
+@media screen and (min-width: 768px) {
+    .feature__title {
+        text-align: left;
+    }
+}
+
 .feature__text {
     font-size: 16px;
     line-height: 1.5;
@@ -563,6 +584,15 @@ button {
     flex-direction: column;
     justify-content: center;
     gap: 72px;
+}
+
+@media screen and (min-width: 768px) {
+    .team__list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 64px;
+    }
 }
 
 .team__item {
@@ -654,10 +684,26 @@ button {
     gap: 48px;
 }
 
+@media screen and (min-width: 768px) {
+    .portfolio__list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 72px;
+
+        }
+}
+
 .portfolio__item {
     /* width: calc((100% - 48px) / 3); */
     background: #ffffff;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+    .portfolio__item {
+        width: calc((100% - 24px) / 2);
+    }
 }
 
 .portfolio__item:hover {
@@ -724,12 +770,37 @@ button {
     padding-top: 96px;
     padding-bottom: 96px;
     background: var(--color-dark-navyblue);
+}
 
+@media screen and (min-width: 768px) {
+    .footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .footer-container {
+        display: flex;
+        align-items: baseline;
+        text-align: start;
+        flex-wrap: wrap;
+        width: 552px;
+        column-gap: 24px;
+    }
 }
 
 .footer__contacts {
     text-align: center;
 }
+
+@media screen and (min-width: 768px) {
+    .footer__contacts {
+        text-align: left;
+    }
+}
+
 
 .footer__logo-blue {
     display: inline-block;
@@ -763,6 +834,12 @@ button {
     text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+    .footer__social {
+        margin-top: 0;
+    }
+}
+
 .footer__social-title {
     margin-bottom: 16px;
     font-weight: 500;
@@ -770,6 +847,12 @@ button {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--color-white);
+}
+
+@media screen and (min-width: 768px) {
+    .footer__social-title {
+        text-align: left;
+    }
 }
 
 .footer__social-list {
@@ -815,6 +898,14 @@ button {
     margin-top: 72px;
 }
 
+@media screen and (min-width: 768px) {
+    .footer__subscribe {
+        align-items: flex-start;
+    }
+}
+
+
+
 .footer__subscribe-title {
     margin-bottom: 16px;
     font-weight: 500;
@@ -830,7 +921,14 @@ button {
     justify-content: center;
     align-items: center;
     gap: 24px;
+}
 
+@media screen and (min-width: 768px) {
+    .footer__subscribe-form {
+        flex-direction: row;
+        justify-content: start;
+        gap: 24px;
+    }
 }
 
 .footer__subscribe-input {
@@ -917,6 +1015,12 @@ button {
     box-shadow: var(--shadow-modal);
     background: var(--color-dairy);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+    .modal__window {
+        width: 408px;
+    }
 }
 
 .modal__button-close {
